Update js links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js"></script>
-		<script src="/js/owl.carousel.min.js"></script>
-		<script src="/js/main.js"></script>
+		<script src="{{ "/js/owl.carousel.min.js" | prepend: site.baseurl }}"></script>
+		<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 	</body>
 </html>
